Xcode not building when modified files are part of an object library
Using the attached project, generate a build tree for Xcode.
Compile the project, and run myexe to see the message printed to stdout. Modify obj.cpp to change the message, then recompile. When myexe is run, the new message is not printed out. It looks like dependencies are not handled correctly for the Xcode generator when using object libraries.
If instead the objects are added to the executable, it works fine.
I understand some generators have a limitation where at least one source file must accompany the objects, and this example is compliant with that.